# cashel

./: .gitignore  ARCHITECT-BRIEF.md  BUILD-LOG.md  CLAUDE.md  Dockerfile  README.md  REVIEW-FEEDBACK.md  REVIEW-REQUEST.md  SESSION-CHECKPOINT.md  docker-compose.yml  gunicorn.conf.py  keygen.py  pyproject.toml  requirements.txt
.github/workflows/: demo-deploy.yml  pip-audit-nightly.yml  sync-demo.yml
docs/: cli.md  deployment.md  product-contract.md  secrets.md  security-model.md  vendor-enrichment-coverage.md
examples/: azure_nsg.json  cisco_ftd.txt  gcp_vpc_firewall.json  iptables.txt  juniper_srx.txt  nftables.txt  pfsense.xml
src/cashel/: _helpers.py  activity_log.py  alert_engine.py  archive.py  auth_audit.py  db.py  export.py  extensions.py  fidelity.py  fortinet.py  gate.py  juniper.py  license.py  main.py  notify.py  pfsense.py  remediation.py  report_template.html  reporter.py  runtime.py  schedule_store.py  scheduler_runner.py  settings.py  ssh_connector.py  syslog_handler.py  web.py  webhooks.py
src/flintlock/: main.py  (+7 more)
tests/: test_alert_engine.py  test_asa 2.txt  test_asa.txt  test_audit_engine.py  test_aws.py  test_azure.py  test_ci_smoke.py  test_cisco.py  test_cli_smoke.py  test_db.py  test_diff.py  test_drift.py  test_evidence_bundle.py  test_export.py  test_fidelity.py  test_forti.txt  test_fortinet.py  test_fortinet_findings.py  test_gate.py  test_gcp.py  test_iptables.py  test_juniper.py  test_notify.py  test_pa.xml  test_paloalto.py  test_pfsense.py  test_pfsense.xml  test_reports.py  test_rule_quality.py  test_soc2_stig.py  test_webhooks.py
(+19 files in other folders)
